--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -15,6 +15,7 @@ gem "neat", "~> 1.7.0"
 gem "newrelic_rpm"
 gem "normalize-rails", "~> 3.0.0"
 gem "pg"
+gem "puma"
 gem "rack-timeout"
 gem "rails", "<%= Suspenders::RAILS_VERSION %>"
 gem "recipient_interceptor"
@@ -23,7 +24,6 @@ gem "sass-rails", "~> 5.0"
 gem "simple_form"
 gem "title"
 gem "uglifier"
-gem "unicorn"
 
 group :development do
   gem "spring"
