--- a/templates/postgresql_database.yml.erb
+++ b/templates/postgresql_database.yml.erb
@@ -13,5 +13,5 @@ test:
   database: <%= app_name %>_test
 
 production:
-  url:  <%%= ENV.fetch("DATABASE_URL") %>
+  url:  <%%= ENV.fetch("DATABASE_URL", "") %>
   pool: <%%= ENV.fetch("DB_POOL", ENV.fetch("MAX_THREADS", 5) %>
