Specify deploy settings
* Set values that DATABASE_URL won't override / set
* Add staging
* Use max of thread count or db pool, since @schneems says:
  > You need your pool to at least be as large as your puma thread
  > count.

--- a/templates/postgresql_database.yml.erb
+++ b/templates/postgresql_database.yml.erb
@@ -12,6 +12,11 @@ test:
   <<: *default
   database: <%= app_name %>_test
 
-production:
+production: &deploy
+  encoding: utf8
+  min_messages: warning
+  pool: <%%= [ENV.fetch("MAX_THREADS", 2), ENV.fetch("DB_POOL", 2)].max %>
+  timeout: 5000
   url:  <%%= ENV.fetch("DATABASE_URL", "") %>
-  pool: <%%= ENV.fetch("DB_POOL", ENV.fetch("MAX_THREADS", 5) %>
+
+staging: *deploy
