--- a/templates/bin_setup.erb
+++ b/templates/bin_setup.erb
@@ -12,25 +12,15 @@ bundle check || bundle install
 
 # Set up configurable environment variables
 if [ ! -f .env ]; then
-  cp .sample.env .env
+  cp .sample.env .envrc
 fi
 
+# Build the docker image
+fig build
+
 # Set up database and add any development seed data
-bundle exec rake db:setup dev:prime
+fig run web bundle exec rake db:setup dev:prime
 
 # Add binstubs to PATH via export PATH=".git/safe/../../bin:$PATH" in ~/.zshenv
 mkdir -p .git/safe
 
-# Pick a port for Foreman
-if ! grep --quiet --no-messages --fixed-strings 'port' .foreman; then
-  printf 'port: <%= config[:port_number] %>\n' >> .foreman
-fi
-
-if ! command -v foreman > /dev/null; then
-  printf 'Foreman is not installed.\n'
-  printf 'See https://github.com/ddollar/foreman for install instructions.\n'
-fi
-
-# Only if this isn't CI
-# if [ -z "$CI" ]; then
-# fi
